# argus

./: .gitignore  README.md  main.py  pyproject.toml  setup.cfg
.github/workflows/: pypi.yml
src/argus/: core.py
src/wifi_monitor/: __init__.py  cli.py  core.py
tests/: test_wifi_monitor.py
