[metadata]
name = wifi-monitor
version = attr: wifi_monitor.__version__
description = WiFi Uptime and Bandwidth Monitor
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    speedtest-cli
    pandas
    matplotlib

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    wifi-monitor = wifi_monitor.cli:main
