[metadata]
name = argus
version = attr: argus.__version__
description = Argus: WiFi Uptime and Bandwidth Monitor
long_description = file: README.md
long_description_content_type = text/markdown
author = SahooBishwajeet
author_email = biswa.2004.bdk@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    speedtest-cli
    pandas
    matplotlib

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    argus = argus.cli:main
